--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,48 @@
  *= require_tree .
  *= require_self
  */
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    border: 1px solid #e7e7e7;
+    background-color: #f3f3f3;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: #666;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #ddd;
+}
+
+.active a {
+    color: white;
+    background-color: #cc0000;
+}
+
+.nav-img-logo{
+    width: auto;
+    height: 40px;
+    margin: 0 20px 0 20px;
+}
+
+body{
+    margin: 0;
+    padding: 0;
+}
+
+#main{
+    margin: 30px;
+}
