--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,18 +22,43 @@
   </head>
 
   <body>
-  <nav>
-    <ul>
-      <li><%= image_tag 'rubyOnTiss-logo-png.png', class:'nav-img-logo', alt: 'Description of the image' %>
-      <li><%= link_to 'Home', root_path %></li>
-      <li><%= link_to 'Person', person_path %></li>
-      <li><%= link_to 'Courses', courses_path %></li>
-      <li><%= link_to 'Projects', projects_path %></li>
-      <li><%= link_to 'Theses', theses_path %></li>
-    </ul>
+
+  <nav class="topnav">
+
+    <a href="#home" id="logo-mobile"><%= image_tag 'rubyOnTiss-logo-png.png', class:'nav-img-logo', alt: 'Ruby on Tiss Logo' %></a>
+    <div id="myLinks">
+      <ul>
+        <li id="logo-desktop"><%= image_tag 'rubyOnTiss-logo-png.png', class:'nav-img-logo', alt: 'Ruby on Tiss Logo' %></li>
+        <li><%= link_to 'Home', root_path %></li>
+        <li><%= link_to 'Person', person_path %></li>
+        <li><%= link_to 'Courses', courses_path %></li>
+        <li><%= link_to 'Projects', projects_path %></li>
+        <li><%= link_to 'Theses', theses_path %></li>
+      </ul>
+    </div>
+
+    <a href="javascript:void(0);" class="icon" id="mobile-menu-icon" onclick="myFunction()">
+      <%= image_tag 'menu.png', class:'nav-img-logo', alt: 'Ruby on Tiss Logo' %>
+    </a>
   </nav>
+
   <section id="main">
     <%= yield %>
+    <%= @data %>
   </section>
+
+
+    <script>
+        function myFunction() {
+            var x = document.getElementById("myLinks");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+    </script>
+
+
   </body>
 </html>
