--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -93,7 +93,23 @@ li a:hover:not(.active) {
     }
 
     .topnav #myLinks {
-        display: none;
+        transform: scaleY(0);
+        width:100%;
+        transform-origin: top;
+        position: absolute;
+        opacity: 0;
+        visibility: hidden;
+        transition: all 0.3s ease;
+        overflow: hidden;
+
+    }
+
+    .topnav #myLinks.expanded {
+        transform: scaleY(1);
+        opacity: 1;
+
+        visibility: visible;
+
     }
 
     ul{
