--- a/app/views/person/index.html.erb
+++ b/app/views/person/index.html.erb
@@ -7,12 +7,40 @@
   <%= submit_tag "Search" %>
 <% end %>
 
+<% if @searchDataResponse.present? && @searchDataResponse["results"].present? %>
 
 <div id="searchResults">
-  <ul>
-    <% @searchDataResponse %>
-    <% @searchDataResponse.each do |item| %>
-      <li><%= item %></li>
+  <ul class="searchTesponseListUl">
+      <% if responseData =  @searchDataResponse["results"] %>
+
+      <% responseData.each do |result| %>
+
+        <li class="searchResultListItem">
+          <div class="searchResponseInfoContainer">
+            <%= result["prefixTitle"] %><br>
+            <strong><%= result["firstname"] %>
+            <%= result["lastname"] %></strong>
+
+          </div>
+
+          <div class="searchResponseIconsContainer">
+            <div class="searchResponseIconsDiv">
+            <%= link_to person_detail_path(result["id"]) do %>
+              <%= image_tag 'detail.png', class: "btn-img" %>
+            <% end %>
+          </div>
+
+          <div class="searchResponseIconsDiv">
+            <%= link_to person_favorite_path(result["id"]) do %>
+              <%= image_tag 'favorite.png', class: "btn-img" %>
+            <% end %>
+          </div>
+
+          </div>
+        </li>
+
+      <% end %>
     <% end %>
   </ul>
 </div>
+<% end %>
