changed how urls are routed, added a detail view page, implemented XML parsing, basic information gets displayed on detail view page.

--- a/app/views/layouts/personListItem.html.erb
+++ b/app/views/layouts/personListItem.html.erb
@@ -1,5 +1,5 @@
 <ul>
-  <% @searchDataResponse.each do |article| %>
+  <% @search_data_response.each do |article| %>
     <li>
       <a href="<%= article_path(article) %>">
         <%= article.firstname %>
