--- a/app/views/person/index.html.erb
+++ b/app/views/person/index.html.erb
@@ -1,17 +1,16 @@
-<h1><%= @siteName %></h1>
+<h1><%= @site_name %></h1>
 
 
-<%=  form_tag('/person/search', method: 'get')  do %>
+<%=  form_tag('/person', method: 'get')  do %>
   <%= label_tag :search %>
   <%= text_field_tag :search, params[:search] %>
-  <%= submit_tag "Search" %>
 <% end %>
 
-<% if @searchDataResponse.present? && @searchDataResponse["results"].present? %>
+<% if @search_data_response.present? && @search_data_response["results"].present? %>
 
 <div id="searchResults">
   <ul class="searchTesponseListUl">
-      <% if responseData =  @searchDataResponse["results"] %>
+      <% if responseData =  @search_data_response["results"] %>
 
       <% responseData.each do |result| %>
 
