--- a/app/views/person/index.html.erb
+++ b/app/views/person/index.html.erb
@@ -1,36 +1,36 @@
 <h1><%= @site_name %></h1>
 
 
-<%=  form_tag('/person', method: 'get')  do %>
-  <%= label_tag :search %>
-  <%= text_field_tag :search, params[:search] %>
+<%= form_tag('/person', method: 'get', class: 'searchForm')  do %>
+  <%= text_field_tag :search, params[:search], class:'searchInput'%>
+  <%= submit_tag 'Suchen', class: 'searchSubmitButton' %>
 <% end %>
 
 <% if @search_data_response.present? && @search_data_response["results"].present? %>
 
 <div id="searchResults">
+
   <ul class="searchTesponseListUl">
       <% if responseData =  @search_data_response["results"] %>
-
       <% responseData.each do |result| %>
-
         <li class="searchResultListItem">
           <div class="searchResponseInfoContainer">
-            <%= result["prefixTitle"] %><br>
+            <% if result["prefixTitle"] %>
+                <%= result["prefixTitle"] %><br>
+            <%end %>
             <strong><%= result["firstname"] %>
             <%= result["lastname"] %></strong>
-
           </div>
 
           <div class="searchResponseIconsContainer">
             <div class="searchResponseIconsDiv">
-            <%= link_to person_detail_path(result["id"]) do %>
+            <%= link_to person_detail_path(result["id"]), class: 'searchResponseIconsLink' do %>
               <%= image_tag 'detail.png', class: "btn-img" %>
             <% end %>
           </div>
 
           <div class="searchResponseIconsDiv">
-            <%= link_to person_favorite_path(result["id"]) do %>
+            <%= link_to person_favorite_path(result["id"]), class: 'searchResponseIconsLink' do %>
               <%= image_tag 'favorite.png', class: "btn-img" %>
             <% end %>
           </div>
