--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -295,3 +295,57 @@ li a:hover:not(.active) {
     }
 }
 
+/* ******************* Detail page styling ******************* */
+
+.card {
+    max-width: 350px;
+    width: 90%;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+.card-image {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    display: flex;
+    justify-content: center; /* align horizontally */
+    align-items: flex-end; /* align vertically */
+}
+
+.card-img {
+    width: 100%;
+    height: auto;
+    margin-top: auto;
+}
+
+.card-content {
+    padding: 20px;
+}
+
+.card-title {
+    margin: 0;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.card-subtitle {
+    margin: 0;
+    font-size: 16px;
+    color: #777;
+}
+
+.back-button {
+    padding: 10px 20px;
+    margin: 10px 0;
+    background-color: #f3f3f3;
+    border: none;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #000;
+    cursor: pointer;
+}
+
