--- a/app/views/favorites/edit.html.erb
+++ b/app/views/favorites/edit.html.erb
@@ -1,15 +1,17 @@
 <h1>Edit Favorite</h1>
 
 <%= form_with model: @favorite, local: true do |form| %>
-  <div>
+  <div class="form-group">
     <%= form.label :keywords %>
-    <%= form.text_area :keywords %>
+    <%= form.text_field :keywords, class: 'form-control' %>
   </div>
-  <div>
+  <div class="form-group">
     <%= form.label :personal_notes %>
-    <%= form.text_area :personal_notes %>
+    <%= form.text_area :personal_notes, class: 'form-control' %>
   </div>
-  <div>
-    <%= form.submit 'Save' %>
+  <div class="form-group">
+    <%= form.submit 'Update Favorite', class: 'btn btn-primary' %>
   </div>
 <% end %>
+
+<%= link_to 'Back', favorites_path, class: 'btn btn-secondary' %>
